--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zerocho",
+  "name": "z-com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.3.1",
-    "classnames": "^2.5.1",
+    "@faker-js/faker": "^8.2.0",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
-    "next": "14.0.4",
+    "next": "^14",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -21,7 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14",
     "typescript": "^5"
   }
 }
