--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@tanstack/react-query": "^5.17.9",
+    "@tanstack/react-query-devtools": "^5.17.9",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "next": "^14",
